<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Weather Channel</string>
    <string name="tab1">My Location</string>
    <string name="tab2">Search Locations</string>
    <string name="d">d</string>
    <string name="Submit">Submit</string>
    <string name="myLocation">My Location</string>
    <string name="searchLocation">Search Location</string>
    <string name="title_activity_first_screen">FirstScreen</string>
    <string name="title_activity_my_location">My Location</string>
    <string name="title_activity_search_location">Search Locations</string>
    <string name="title_activity_day_forecast">DayForecast</string>
    <string name="name">Developer: Jiaxin Li</string>
    <string name="radar">radar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="weather">Update</string>
    <string name="current">Current Weather Conditions</string>
    <string name="degree"> °F</string>
    <string name="forecast">Forecast</string>
    <string name="dayforecast">Today\'s Forecast</string>
    <string name="title_activity_forecast">Forecast</string>

</resources>